tests/machine/x/c/go_auto.c
#include <stdio.h>
#include <stdlib.h>

int main() {
  printf("%d\n", testpkg.Add(2, 3));
  printf("%d\n", testpkg.Pi);
  printf("%d\n", testpkg.Answer);
  return 0;
}
